--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.example</groupId>
   <artifactId>my-app</artifactId>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
@@ -16,6 +16,14 @@
             <configuration>
                 <source>1.8</source> <!-- Set source compatibility to Java 8 -->
                 <target>1.8</target> <!-- Set target compatibility to Java 8 -->
+            </configuration>
+        </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
+            <configuration>
+                <webxml>${basedir}/src/main/webapp/WEB-INF/web.xml</webxml>
             </configuration>
         </plugin>
     </plugins>
